[website] HTML ready

--- a/index.html
+++ b/index.html
@@ -5,32 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style link="./css/style.css"></style>
 </head>
 <body>
-    <h1>This is heading</h1>
-    <h2>This is heading</h2>
-    <h3>This is heading</h3>
-    <h4>This is heading</h4>
-    <h5>This is heading</h5>
-    <h6>This is heading</h6>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae nostrum eum, dolorum voluptate eligendi impedit consequatur. Autem facilis inventore laboriosam, porro corporis ab. Est temporibus aperiam iure cumque delectus illo!</p>
-    <br>
-    <a href="https://www.google.com" target="_blank">google</a>
+    
+<header>
+<h1> Dev 101</h1>
+<nav>
+    <ul>
+        <li><a href="">HTML5</a></li>
+          <li> <a href="">CSS3</a></li>
+           <li><a href="">Javascript</a></li>
+    </ul>
+</nav>
+<!-- https://raw.githubusercontent.com/Jasbir96/pp-10__HTML/main/img/lap.jpeg -->
+<img src="https://source.unsplash.com/collection/190727/1600x900" alt="Home_image"/>
+</header>
 
-    <img src="https://images.unsplash.com/photo-1534438327276-14e5300c3a48?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80" alt="jim images" width="100%"/>
 
-   <ul>
-       <li>I am a list item</li>
-       <li>I am a list item</li>
-       <li>I am a list item</li>
-       <li>I am a list item</li>
-   </ul>
+<section>
+    <div>
+        <img src="https://raw.githubusercontent.com/Jasbir96/pp-10__HTML/main/img/html.png" alt="HTML5">
+        <h2>HTML5</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, consequatur animi quod mollitia natus nostrum dolores nobis qui quam voluptatibus in ullam laboriosam aut, culpa ab voluptatum neque cupiditate dolorem.</p>
+    </div>
+    <div>
+        <img src="https://raw.githubusercontent.com/Jasbir96/pp-10__HTML/main/img/css.png" alt="Css3">
+        <h2>css</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, consequatur animi quod mollitia natus nostrum dolores nobis qui quam voluptatibus in ullam laboriosam aut, culpa ab voluptatum neque cupiditate dolorem.</p>
+    </div>
+    <div>
+        <img src="https://raw.githubusercontent.com/Jasbir96/pp-10__HTML/main/img/icon.png" alt="Javascript">
+        <h2>Javascript</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, consequatur animi quod mollitia natus nostrum dolores nobis qui quam voluptatibus in ullam laboriosam aut, culpa ab voluptatum neque cupiditate dolorem.</p>
+    </div>
+</section>
 
-   <ol>
-       <li>I am a list item</li>
-       <li>I am a list item</li>
-       <li>I am a list item</li>
-       <li>I am a list item</li>
-   </ol>
+
+<footer>
+<h6>Marvel999</h6>
+</footer>
+
+
 </body>
 </html>
